appId: chat.rocket.reactnative
jsEngine: graaljs
env:
  URL: https://mobile.rocket.chat
tags:
  - 'skip'
---
- runFlow: ../helpers/launch-app.yaml
- runFlow: ../helpers/register.yaml
- runFlow:
    file: ../helpers/login.yaml
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- assertVisible:
    id: 'change-password-required-button'

- assertVisible:
    id: 'change-password-required-logout'

- tapOn:
    id: 'change-password-required-logout'
- assertVisible:
    id: 'new-server-view-input'
- runFlow: ../helpers/login.yaml
- assertVisible:
    id: 'change-password-required-button'
- tapOn:
    id: 'change-password-required-button'
- assertVisible:
    id: 'action-sheet-content-with-input-and-submit'
- tapOn:
    id: 'change-password-required-sheet-input-password'
- inputText:
    text: '123456'

- tapOn:
    id: 'change-password-required-sheet-input-confirm-password'
- inputText:
    text: '123456'
- tapOn:
    id: 'change-password-required-sheet-confirm'

- extendedWaitUntil:
    notVisible:
      id: 'change-password-required-button'
    timeout: 10000 # in milliseconds
- assertVisible:
    id: 'rooms-list-view-item-general'

- runFlow: ../helpers/logout.yaml

- runFlow:
    file: ../helpers/login.yaml
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- assertVisible:
    id: 'rooms-list-view-item-general'
