appId: chat.rocket.reactnative
env:
  URL: https://mobile.rocket.chat
---
- runFlow: ../helpers/navigate-to-workspace.yaml

- assertVisible:
    id: login-view-forgot-password
- tapOn:
    id: login-view-forgot-password
- assertVisible:
    id: forgot-password-view
- inputText:
    text: user@mobile.rocket.com
- tapOn:
    id: forgot-password-view-submit
- assertVisible: If this email is registered, we'll send instructions on how to reset your password. If you do not receive an email shortly, please come back and try again.
- tapOn: OK
