appId: chat.rocket.reactnative
name: Change Password
jsEngine: graaljs
onFlowStart:
  - runFlow: '../helpers/setup.yaml'
onFlowEnd:
  - evalScript: ${output.utils.deleteCreatedUsers()}

---
- runFlow: ../helpers/launch-app.yaml
- runFlow: ../helpers/login.yaml

- tapOn:
    id: rooms-list-view-sidebar
- tapOn:
    id: sidebar-profile
- scrollUntilVisible:
    element:
      id: profile-view-new-password
- tapOn:
    id: profile-view-new-password
- inputText:
    text: '123456'
- scrollUntilVisible:
    element:
      id: profile-view-submit
    centerElement: true
- tapOn:
    id: profile-view-submit
- extendedWaitUntil:
    visible:
      id: profile-view-enter-password-sheet-input
    timeout: 60000
- tapOn:
    id: profile-view-enter-password-sheet-input
- inputText:
    text: ${output.user.password}
- hideKeyboard
- tapOn:
    id: profile-view-enter-password-sheet-confirm
- runFlow: ../helpers/logout.yaml

- runFlow:
    file: ../helpers/login.yaml
    env:
      USERNAME: ${output.user.username}
      PASSWORD: 123456
- assertVisible:
    id: 'rooms-list-view-item-general'
