appId: chat.rocket.reactnative
name: Forgot Password
jsEngine: graaljs
onFlowStart:
  - runFlow: '../helpers/setup.yaml'
  - evalScript: ${output.utils.createUser()}

---
- runFlow: ../helpers/launch-app.yaml
- runFlow: ../helpers/navigate-to-login.yaml
- tapOn:
    id: 'login-view-forgot-password'
- extendedWaitUntil:
    visible:
      id: 'forgot-password-view'
    timeout: 30000
- inputText:
    text: ${output.user.email}
- tapOn:
    id: 'forgot-password-view-submit'
- extendedWaitUntil:
    visible:
      text: "If this email is registered, we'll send instructions on how to reset your password. If you do not receive an email shortly, please come back and try again."
    timeout: 30000
