appId: chat.rocket.reactnative
name: Login (Invalid Credentials)
jsEngine: graaljs
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowEnd:
  - evalScript: ${output.utils.deleteCreatedUsers()}

---
- runFlow: ../../helpers/launch-app.yaml
- runFlow: ../../helpers/navigate-to-login.yaml
- tapOn:
    id: 'login-view-email'
- inputText: 'someusername'
- hideKeyboard
- tapOn:
    id: 'login-view-password'
- inputText: 'NotMyActualPassword'
- hideKeyboard
- tapOn:
    id: login-view-submit
- assertVisible:
    text: 'Your credentials were rejected! Please try again.'
