appId: chat.rocket.reactnative
name: Create Account (Email Already Used)
jsEngine: graaljs
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
  - evalScript: ${output.utils.createUser()}

---
- runFlow: ../../helpers/launch-app.yaml
- runFlow: ../../helpers/navigate-to-register.yaml
- tapOn: Full name. Required.
- inputText: ${output.user.name}
- pressKey: enter
- tapOn: Username. Required.
- inputText: ${output.user.username}
- pressKey: enter
- tapOn: Email. Required.
- inputText: ${output.user.email}
- pressKey: enter
- tapOn: Password. Required.
- inputText: ${output.user.password}
- pressKey: enter
- tapOn: Confirm Password. Required.
- inputText: ${output.user.password}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: register-view-submit
- tapOn:
    id: register-view-submit
- assertVisible: Oops!
