appId: chat.rocket.reactnative
name: "Join Channel"
jsEngine: graaljs
onFlowStart:
    - runScript: "../setup.js"
---
- launchApp
- scrollUntilVisible:
    element:
        text: "detox-public"
- tapOn:
    text: "detox-public"
- tapOn:
    text: detox-public
- tapOn:
    id: "room-actions-leave-channel"
- assertVisible: "Are you sure you want to leave the room detox-public?"
- tapOn: "YES, LEAVE IT!"
- assertVisible: "Left the room successfully"